pkg/main/default/objects/EnvelopeLocalization__c/EnvelopeLocalization__c.object-meta.xml
<CustomObject>
    <label>DocuSign Localization</label>
    <nameField>
        <label>Language</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Localizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>