pkg/main/default/objects/EnvelopeLocalization__c/fields/EmailMessage__c.field-meta.xml
<CustomField>
    <fullName>EmailMessage__c</fullName>
    <description>Email Message</description>
    <label>Email Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>