pkg/main/default/objects/EnvelopeLocalization__c/fields/EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>EmailSubject__c</fullName>
    <description>Email Subject</description>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>