pkg/main/default/objects/EnvelopeLocalization__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language Code</description>
    <label>Language Code</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>